--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,17 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
 
 
@@ -114,8 +125,6 @@
             </resource>
         </resources>
 -->
-
-
 
         <plugins>
             <plugin>
