--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
             <version>4.12</version>
         </dependency>
 
+        <!--amqp-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
 
